--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script src="/api/env.js"></script>
+    <script src="api/env.js"></script>
     <script src="script.js"></script>
 </body>
 
