--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Theme Customizer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Logo.jpg" type="image/x-icon">
 </head>
 
 <body>
