Google Site Verification

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <meta name="author" content="Arman Qureshi">
     <meta name="description"
         content="UI Theme Generator that uses Groq API to Generate Theme based on the Prompt given by the User">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords"
+        content="thearmanqureshi, CSS Theme Generator, AI Theme Generator, AI Generated UI Theme Customizer">
+    <meta http-equiv="content-language" content="en">
+    <meta name="theme-color" content="#f1f5f9">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta name="HandheldFriendly" content="true">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://themegenerator.vercel.app">
@@ -39,6 +47,9 @@
         content="UI Theme Generator that uses Groq API to Generate Theme based on the Prompt given by the User">
     <meta name="twitter:image"
         content="https://opengraph.b-cdn.net/production/images/6bf70029-68e8-4d96-b7ef-52a94767843e.png?token=F4sG26kKTauQT3MVb5o0B_MQg2wHigOqYYayT3Agegc&height=675&width=1200&expires=33278804475">
+
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="tubGbDkeKF5kWv5fjAHDHnQsW-8Kz6DX3hh0_z0HDkg" />
 
 </head>
 
