--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Theme Generator</title>
+    <title>AI Theme Generator – Create Custom CSS Themes Instantly</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Prism.js Theme -->
@@ -19,7 +19,7 @@
     <!-- HTML Meta Tags -->
     <meta name="author" content="Arman Qureshi">
     <meta name="description"
-        content="A fast and intelligent UI Theme Generator built with the Groq API. Transform text prompts into beautiful CSS themes effortlessly.">
+        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt and get clean code.">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
         content="thearmanqureshi, CSS Theme Generator, AI Theme Generator, AI Generated UI Theme Customizer">
@@ -32,9 +32,9 @@
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://themegenerator.vercel.app">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="AI Theme Generator – Instantly Create Custom CSS Themes with AI">
+    <meta property="og:title" content="AI Theme Generator – Create Custom CSS Themes Instantly">
     <meta property="og:description"
-        content="A fast and intelligent UI Theme Generator built with the Groq API. Transform text prompts into beautiful CSS themes effortlessly.">
+        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt and get clean code.">
     <meta property="og:image"
         content="https://opengraph.b-cdn.net/production/images/6bf70029-68e8-4d96-b7ef-52a94767843e.png?token=F4sG26kKTauQT3MVb5o0B_MQg2wHigOqYYayT3Agegc&height=675&width=1200&expires=33278804475">
 
@@ -42,9 +42,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="themegenerator.vercel.app">
     <meta property="twitter:url" content="https://themegenerator.vercel.app">
-    <meta name="twitter:title" content="AI Theme Generator – Instantly Create Custom CSS Themes with AI">
+    <meta name="twitter:title" content="AI Theme Generator – Create Custom CSS Themes Instantly">
     <meta name="twitter:description"
-        content="A fast and intelligent UI Theme Generator built with the Groq API. Transform text prompts into beautiful CSS themes effortlessly.">
+        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt and get clean code.">
     <meta name="twitter:image"
         content="https://opengraph.b-cdn.net/production/images/6bf70029-68e8-4d96-b7ef-52a94767843e.png?token=F4sG26kKTauQT3MVb5o0B_MQg2wHigOqYYayT3Agegc&height=675&width=1200&expires=33278804475">
 
