--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- HTML Meta Tags -->
     <meta name="author" content="Arman Qureshi">
     <meta name="description"
-        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt and get clean code.">
+        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt & get clean code.">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
         content="thearmanqureshi, CSS Theme Generator, AI Theme Generator, AI Generated UI Theme Customizer">
@@ -34,7 +34,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="AI Theme Generator – Create Custom CSS Themes Instantly">
     <meta property="og:description"
-        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt and get clean code.">
+        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt & get clean code.">
     <meta property="og:image"
         content="https://opengraph.b-cdn.net/production/images/6bf70029-68e8-4d96-b7ef-52a94767843e.png?token=F4sG26kKTauQT3MVb5o0B_MQg2wHigOqYYayT3Agegc&height=675&width=1200&expires=33278804475">
 
@@ -44,7 +44,7 @@
     <meta property="twitter:url" content="https://themegenerator.vercel.app">
     <meta name="twitter:title" content="AI Theme Generator – Create Custom CSS Themes Instantly">
     <meta name="twitter:description"
-        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt and get clean code.">
+        content="Create stunning, responsive CSS themes in seconds using this AI-powered UI Theme Generator built with the Groq API. Just enter a prompt & get clean code.">
     <meta name="twitter:image"
         content="https://opengraph.b-cdn.net/production/images/6bf70029-68e8-4d96-b7ef-52a94767843e.png?token=F4sG26kKTauQT3MVb5o0B_MQg2wHigOqYYayT3Agegc&height=675&width=1200&expires=33278804475">
 
