--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <footer>
         <div id="socials">
-            <a href="mailto:thearmanqureshi@gmail.com" aria-label="E-Mail Me"><i class='bx bxs-envelope'></i></a>
+            <a href="https://thearmanqureshi.vercel.app" aria-label="Personal Portfolio"><i class='bx bx-globe'></i></a>
             <a href="https://github.com/thearmanqureshi" aria-label="GitHub Profile"><i class='bx bxl-github'></i></a>
             <a href="https://linkedin.com/in/thearmanqureshi" aria-label="Linkedin Profile"><i
                     class='bx bxl-linkedin-square'></i></a>
