--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <!-- Boxicons Import -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <!-- Custom CSS -->
-    <link rel="shortcut icon" href="images/Logo.jpg" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <!-- HTML Meta Tags -->
     <meta name="author" content="Arman Qureshi">
